tests/error/ptr_ctor.gw
// [contains] can't call pointers in constructor.
class C
{
	typedef void (test)() {}
	test t;
	t();
}
